feature/sort-answers toggle labels
and update answer post to include relevent sibling data

--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -300,35 +300,21 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAi-od-fdT">
-                                            <rect key="frame" x="18" y="28" width="554" height="44"/>
-                                            <attributedString key="attributedText">
-                                                <fragment content="This is where answers to an individual question will go">
-                                                    <attributes>
-                                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <font key="NSFont" size="18" name="Geneva"/>
-                                                    </attributes>
-                                                </fragment>
-                                            </attributedString>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LWZ-zh-Ofa">
-                                            <rect key="frame" x="16" y="61" width="150" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LWZ-zh-Ofa">
+                                            <rect key="frame" x="31" y="65" width="119" height="22"/>
                                             <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
-                                            <state key="normal">
+                                            <state key="focused">
                                                 <attributedString key="attributedTitle">
-                                                    <fragment content="vote">
+                                                    <fragment content="Vote">
                                                         <attributes>
-                                                            <font key="NSFont" size="15" name="Futura-Medium"/>
+                                                            <font key="NSFont" metaFont="smallSystem"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         </attributes>
                                                     </fragment>
                                                 </attributedString>
                                             </state>
-                                            <connections>
-                                                <action selector="upvoteAnswer:" destination="paj-ta-3IH" eventType="touchUpInside" id="6Xd-qX-61S"/>
-                                            </connections>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y23-Ni-UgJ">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y23-Ni-UgJ">
                                             <rect key="frame" x="174" y="65" width="44" height="21"/>
                                             <accessibility key="accessibilityConfiguration" label="voteCount">
                                                 <accessibilityTraits key="traits" staticText="YES" updatesFrequently="YES"/>
@@ -343,19 +329,30 @@
                                             </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SDF-MO-ENO">
+                                            <rect key="frame" x="46" y="57" width="85" height="30"/>
+                                            <state key="normal" title="vote button"/>
+                                            <connections>
+                                                <action selector="upvoteAnswer:" destination="paj-ta-3IH" eventType="touchUpInside" id="5fE-T0-qZ7"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAi-od-fdT">
+                                            <rect key="frame" x="23" y="18" width="554" height="44"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="This is where answers to an individual question will go">
+                                                    <attributes>
+                                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <font key="NSFont" size="18" name="Geneva"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="LWZ-zh-Ofa" firstAttribute="leading" secondItem="iTc-vT-XlP" secondAttribute="leadingMargin" constant="8" id="GXd-xP-E3M"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="EAi-od-fdT" secondAttribute="trailing" constant="20" id="LYB-Bm-uUl"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="EAi-od-fdT" secondAttribute="bottom" constant="20" id="NdL-DE-4j7"/>
-                                        <constraint firstItem="EAi-od-fdT" firstAttribute="top" secondItem="iTc-vT-XlP" secondAttribute="topMargin" constant="20" id="P9p-hq-SP4"/>
-                                        <constraint firstItem="EAi-od-fdT" firstAttribute="leading" secondItem="iTc-vT-XlP" secondAttribute="leadingMargin" constant="10" id="SpA-dB-Dvh"/>
-                                        <constraint firstItem="y23-Ni-UgJ" firstAttribute="leading" secondItem="LWZ-zh-Ofa" secondAttribute="trailing" constant="8" id="aZG-b1-amI"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="answerTextView" destination="EAi-od-fdT" id="ZO7-sI-pd4"/>
-                                    <outlet property="voteButton" destination="LWZ-zh-Ofa" id="hLW-Pa-wiI"/>
+                                    <outlet property="voteButton" destination="SDF-MO-ENO" id="hkR-Ya-ONr"/>
                                     <outlet property="voteCountLabel" destination="y23-Ni-UgJ" id="ie5-k5-Nap"/>
                                 </connections>
                             </tableViewCell>
